@@ -252,8 +252,6 @@ $bookstoreList = array(
 
 $datePreferences = array(
 	'default',
-	'juche',
-	'juche bracket',
 	'ISO 8601',
 );
 $defaultDateFormat = 'ko';
@@ -261,14 +259,6 @@ $dateFormats = array(
 	'ko time'            => 'H:i',
 	'ko date'            => 'Y년 M월 j일 (D)',
 	'ko both'            => 'Y년 M월 j일 (D) H:i',
-
-	'juche time'         => 'H:i',
-	'juche date'         => 'xoY년 M월 j일 (D)',
-	'juche both'         => 'xoY년 M월 j일 (D) H:i',
-
-	'juche bracket time' => 'H:i',
-	'juche bracket date' => '주체xoY년 (Y년) M월 j일 (D)',
-	'juche bracket both' => '주체xoY년 (Y년) M월 j일 (D) H:i',
 );
 
 $messages = array(
