@@ -419,6 +419,7 @@ changes to languages because of MediaZilla reports.
 * (bug 19441) Updated date formatting for Lithuanian
 * (bug 19630) Added ÄäÇçĞğŇňÖöŞşÜüÝýŽž to Turkmen (tk) linktrail
 * (bug 19949) New linktrail for Greek (el)
+* (bug 19809) Korean (North Korea) (ko-kp) (new)
 
 == Compatibility ==
 
